[gd_scene load_steps=3 format=2]

[ext_resource path="res://SCENE/PauseMenu/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://UI/default_theme.tres" type="Theme" id=2]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 0.678431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 723.0
margin_top = 404.0
margin_right = 1196.0
margin_bottom = 676.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 473.0
margin_bottom = 98.0
theme = ExtResource( 2 )
text = "GMTK Game Jam"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 473.0
margin_bottom = 272.0
custom_constants/separation = 10

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
margin_right = 473.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
theme = ExtResource( 2 )
text = "Resume"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
margin_top = 90.0
margin_right = 473.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 80 )
theme = ExtResource( 2 )
text = "Exit"
